test/zinc_source/compile_errors/functions/11_missing_required_spread.zn
// expected-error: missing required argument 'a'

struct PartialArgs {
    b: i64
}

fn add(a, b) {
    return a + b
}

fn main() {
    args = PartialArgs { b: 2 }
    add(..args)
}
